# poc-chunk-api

./: .env.example  Cargo.toml  README.md  manifest.json  setup_db.sh
migrations/: 001_create_chunks_table.sql
src/: db.rs  main.rs  models.rs
